Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54936

QFont::fromString doesn't match source font

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.8.0 Alpha
    • 5.6
    • GUI: Font handling
    • None
    • Debian _stretch_, Linux 4.6.0 amd64
    • 5dd907bf639f43be7f2cdfdd44ec3795f1b31bf6

      QFont::fromString can't reproduce exactly a font that's been serialized with QFont::toString. If one gets a font's string representation and then recreates another object from that string, the latter object is different than the former according to QFont::operator ==.

        1. main.cpp
          0.4 kB
          Konstantin Shegunov
        2. qtbug-54936.pro
          0.1 kB
          Konstantin Shegunov
        For Gerrit Dashboard: QTBUG-54936
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            kshegunov Konstantin Shegunov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes